Updated homework for printing to pandoc pdf

--- a/week1/homework/ac10281_hw1.md
+++ b/week1/homework/ac10281_hw1.md
@@ -175,15 +175,22 @@ __Answer:__ $895_{10}$ = $37F_{16}$
 
 1. $7566_8 + 4515_8$
 
-$7566_8$
 
-$+4515_8$
+$$
+\begin{array}{ccccc}
+      &   & 1 & 1 & 1\\
+      & 7 & 5 & 6 & 6 \\
+    + & 4 & 5 & 1 & 5 \\
+    \hline
+    1 & 4 & 3 & 0 & 3
+
+    
+\end{array}
+$$
 
 __Answer:__ $=14303_8$
 
 2. $10110011_2 + 1101_2$
-
-$10110011$
 
 |1|0|1|1|0|0|1|1|
 |-|-|-|-|-|-|-|-|
@@ -193,6 +200,9 @@ $10110011$
 __Answer:__ $=11000000$
 
 3. $7A66_{16} + 45C5_{16}$
+
+$$
+$$
 
 4. $3022_5 - 2433_5$
 
@@ -254,7 +264,7 @@ $1-1=0$
 __Answer:__ $=01101101$
 
 
-4. -79_10
+4. $-79_{10}$
 
 First we use the binary representation of 79 and then perform 8 bit 2's complement to get the -124 in bits.
 \[
@@ -392,8 +402,32 @@ $$
 
 ### Exercise 1.3.4
 ### B) $(p \rightarrow q) \rightarrow (q \rightarrow p)$
+
+$$
+\begin{array}{|cc|c|c|c|}
+    \hline
+    p & q & p \rightarrow q & q \rightarrow p & (p \rightarrow q) \rightarrow (q \rightarrow p) \\ 
+    \hline\hline
+    T & T & T & T & T \\ \hline
+    T & F & F & T & T \\ \hline
+    F & T & T & F & F \\ \hline
+    F & F & T & T & T \\ \hline
+\end{array}
+$$
+
 ### D) $(p \leftrightarrow q) \oplus (p \leftrightarrow \neg q)$
 
+$$
+\begin{array}{|cc|c|c|c|c|}
+    \hline
+    p & q & \neg q & p \leftrightarrow q & p \leftrightarrow \neg q & (p \leftrightarrow q) \oplus (p \leftrightarrow \neg q) \\ 
+    \hline\hline
+    T & T & F & T & F & T \\ \hline
+    T & F & T & F & T & T \\ \hline
+    F & T & F & F & T & T \\ \hline
+    F & F & T & T & F & T \\ \hline
+\end{array}
+$$
 
 \pagebreak
 
@@ -421,21 +455,21 @@ $$p \rightarrow y$$
 
 #### D) A person can park in the school parking lot if and only if the person is a senior and at least 17 years of age.
 
-$p \leftrightarrow (s \land y)$
+$$p \leftrightarrow (s \land y)$$
 
 #### E) Being able to park in the school parking lot implies that the person is either a senior or at least 17 years old.
 
-$p \rightarrow (s \lor y)$
+$$p \rightarrow (s \lor y)$$
 
 ### Exercise 1.3.9
 
 #### C) The applicant can enroll in the course only if the applicant has a parental permission.
 
-$c \rightarrow p$
+$$c \rightarrow p$$
 
 #### D) Having parental permission is a necessary condition for enrolling in the course.
 
-$c \rightarrow p$
+$$c \rightarrow p$$
 
 <div style="page-break-after: aLways;"></div>
 \pagebreak
@@ -447,9 +481,11 @@ $c \rightarrow p$
 #### B) _Maintaining a B average is necessary for Joe to be eligible for the honors program._
 
 If Joe is eligible for the honors program, then he is maintaining a B average.
+
 #### C) _Rajiv can go on the roller coaster only if he is at least four feet tall._
 
 If Rajiv can go on the roller  coaster, then he is at least four feet tall.
+
 #### D) _Rajiv can go on the roller coaster if he is at least four feet tall_.
 
 If Rajiv is at least four feet tall, then he can go on the roller coaster.
@@ -464,6 +500,7 @@ __The value of this expression is False.__
 $(p \lor r)$ will always be true since $p$ is true, and $or$ operations only require one proposition to be true. 
 
 $(q \land r)$ will always be false since $q$ is false, and the $and$ operation requires both propositions to be true to evaluate to true.
+
 #### D) $(p \land r) \leftrightarrow (q \land r)$
 __The value for this expression is Unknown__.
 
@@ -510,6 +547,7 @@ $$
 $$
 
 __The statements are logically equivalent.__
+
 #### C)
 If Sally got the job then she was not late for her interview.
 $$j \rightarrow \neg l$$
@@ -560,73 +598,72 @@ __The statement are NOT logically equivalent__
 #### C) $(p \rightarrow q) \land (p \rightarrow r) \equiv p \rightarrow (q \land r)$
 
 $$
-(p \rightarrow q) \land (p \rightarrow r)
-\\
-(\neg p \lor q) \land (\neg p \lor r) \longrightarrow \text{Conditional Identity}
-\\
-\neg p \lor (q \land r) \longrightarrow \text{Distributive Law}
-\\
-p \rightarrow (q \land r) \longrightarrow \text{Conditional Identity}
+\begin{array}{c|c}
+(p \rightarrow q) \land (p \rightarrow r) \\
+(\neg p \lor q) \land (\neg p \lor r) & \text{Conditional Identity} \\
+\neg p \lor (q \land r) & \text{Distributive Law} \\
+p \rightarrow (q \land r) & \text{Conditional Identity}
+\end{array}
 $$
+
 
 #### F) $\neg(p \lor (\neg p \land q)) \equiv \neg p \land \neg q$
 
 $$
-\neg(p \lor (\neg p \land q))
-\\
-\neg p \land \neg (\neg p \land q) \longrightarrow \text{De Morgan's Law}
-\\
-\neg p \land (\neg \neg p \lor \neg q) \longrightarrow \text{De Morgan's Law}
-\\
-\neg p \land (p \lor \neg q) \longrightarrow \text{Double Negation}
-\\
-(\neg p \land p) \lor (\neg p \land \neg q) \longrightarrow \text{Distributive Law}
-\\
-F \lor (\neg p \land \neg q) \longrightarrow \text{Complement Law}
-\\
-\neg p \land \neg q \longrightarrow \text{Identity Law}
+\begin{array} {c|c}
+    \neg(p \lor (\neg p \land q)) \\
+    \neg p \land \neg (\neg p \land q) & \text{De Morgan's Law} \\
+    \neg p \land (\neg \neg p \lor \neg q) & \text{De Morgan's Law} \\
+    \neg p \land (p \lor \neg q) & \text{Double Negation} \\
+    (\neg p \land p) \lor (\neg p \land \neg q) & \text{Distributive Law} \\
+    F \lor (\neg p \land \neg q) & \text{Complement Law} \\
+    \neg p \land \neg q & \text{Identity Law}
+\end{array}
 $$
+
 #### I) $(p \land q) \rightarrow r \equiv (p \land \neg r) \rightarrow \neg q$
 
 $$
-(p \land q) \rightarrow r
-\\
-\neg (p \land q) \lor r \longrightarrow \text{Conditional Identity}
-\\
-(\neg p \lor \neg q) \lor r \longrightarrow \text{De Morgan's Law}
-\\
-(\neg p \lor r) \lor \neg q \longrightarrow \text{Associative Law}
-\\
-\neg \neg (\neg p \lor r) \lor \neg q \longrightarrow \text{Double Negation}
-\\
-\neg (\neg p \lor r) \rightarrow \neg q \longrightarrow \text{Conditional Identity}
-\\
-(\neg \neg p \land \neg r) \rightarrow \neg q \longrightarrow \text{De Morgan's Law}
-\\
-(p \land \neg r) \rightarrow \neg q \longrightarrow \text{Double Negation}
+\begin{array} {c|c}
+    (p \land q) \rightarrow r \\
+    \neg (p \land q) \lor r & \text{Conditional Identity} \\
+    (\neg p \lor \neg q) \lor r & \text{De Morgan's Law} \\
+    (\neg p \lor r) \lor \neg q & \text{Associative Law} \\
+    \neg \neg (\neg p \lor r) \lor \neg q & \text{Double Negation} \\
+    \neg (\neg p \lor r) \rightarrow \neg q & \text{Conditional Identity} \\
+    (\neg \neg p \land \neg r) \rightarrow \neg q & \text{De Morgan's Law} \\
+    (p \land \neg r) \rightarrow \neg q & \text{Double Negation}
+\end{array}
 $$
 
 ### Exercise 1.5.3
 
 #### C) $\neg r \lor (\neg r \rightarrow p)$
 $$
-\neg r \lor (\neg r \rightarrow p) \equiv T \\
-\neg r \lor (\neg \neg r \lor p) \longrightarrow \text{Conditional Identity} \\
-\neg r \lor (r \lor p) \longrightarrow \text{Double Negation} \\
-(\neg r \lor r) \lor p \longrightarrow \text {Associative Law} \\
-T \lor p \longrightarrow \text{Complement Law}\\
-T \longrightarrow \text{Domination Law}
+\begin{array} {c|c}
+    \neg r \lor (\neg r \rightarrow p) \equiv T \\
+    \neg r \lor (\neg \neg r \lor p) & \text{Conditional Identity} \\
+    \neg r \lor (r \lor p) & \text{Double Negation} \\
+    (\neg r \lor r) \lor p & \text {Associative Law} \\
+    T \lor p & \text{Complement Law}\\
+    T & \text{Domination Law}
+\end{array}
 $$
+
 #### D) $\neg (p \rightarrow q) \rightarrow \neg q$
+
 $$
-\neg (p \rightarrow q) \rightarrow \neg q \equiv T \\
-\neg \neg (p \rightarrow q) \lor \neg q \longrightarrow \text{Conditional Identity} \\
-(p \rightarrow q) \lor \neg q \longrightarrow \text{Double Negation} \\
-(\neg p \lor q) \lor \neg q \longrightarrow \text{Conditional Identity} \\
-\neg p \lor (q \lor \neg q) \longrightarrow \text{Associative Law} \\
-\neg p \lor T \longrightarrow \text{Complement Law} \\
-T \longrightarrow \text{Domination Law}
+\begin{array} {c|c}
+    \neg (p \rightarrow q) \rightarrow \neg q \equiv T \\
+    \neg \neg (p \rightarrow q) \lor \neg q & \text{Conditional Identity} \\
+    (p \rightarrow q) \lor \neg q & \text{Double Negation} \\
+    (\neg p \lor q) \lor \neg q & \text{Conditional Identity} \\
+    \neg p \lor (q \lor \neg q) & \text{Associative Law} \\
+    \neg p \lor T & \text{Complement Law} \\
+    T & \text{Domination Law}
+\end{array}
 $$
+
 <div style="page-break-after: aLways;"></div>
 \pagebreak
 
@@ -634,24 +671,32 @@ $$
 
 ### Exercise 1.6.3
 #### C) There is a number that is equal to its square.
+
 $$
 \exists x (x = x^2)
 $$
+
 #### D) Every number is less than or equal to its square plus 1.
+
 $$
 \forall x (x <= x^2+1)
 $$
+
 ### Exercise 1.7.4
 #### B) Everyone was well and went to work yesterday.
 
 $$
 \forall x (\neg S(x) \land W(x))
 $$
+
 #### C) Everyone who was sick yesterday did not go to work.
+
 $$
 \forall x (S(x) \rightarrow \neg W(x))
 $$
+
 #### D) Yesterday someone was sick and went to work.
+
 $$
 \exists x (S(x) \land W(x))
 $$
@@ -664,53 +709,71 @@ $$
 
 #### C) $\exists x ((x = c) \rightarrow P(x))$
 This is __False__.
+
 #### D) $\exists x (Q(x) \land R(x))$
 This is __True__.
+
 #### E) $Q(a) \land P(d)$
 This is __True__.
+
 #### F) $\forall x ((x \neq b) \rightarrow Q(x))$
 This is __True__.
+
 #### G) $\forall x (P(x) \lor R(x))$
 This is __False__.
+
 #### H) $\forall x (R(x) \rightarrow P(x))$
 This is __True__.
+
 #### I) $\exists x (Q(x) \lor R(x))$
 This is __True__.
 
 ### Exercise 1.9.2
 
 #### B) $\exists x \forall y Q(x, y)$
+
 If $x=2$ then all $y$ values will evaluate to true. 
 
 Therefore the statement is __True__.
+
 #### C) $\exists y \forall x P(x, y)$
+
 If $y=1$ then all $x$ values will evaluate to true.
 
 Therefore, the statement is __True__.
+
 #### D) $\exists x \exists y S(x, y)$
+
 All values in the domain S(x, y) are false, therefore no combination can evaluate to true.
 
 Therefore, the statement is __False__.
+
 #### E) $\forall x \exists y Q(x, y)$
+
 There is no column with rows that has values that all evaluate to true.
 
 Therefore, the statement is __False__.
 
 #### F) $\forall x \exists y P(x, y)$
+
 There is at least one column where all rows evaluate to true.
 
 Therefore, the statement is __True__.
+
 #### G) $\forall x \forall y P(x, y)$
+
 There are several values for $x$ and $y$ that will evaluate to false. For instance, if $x=1$ and $y=2$, this would be false.
 
 Therefore, the statement is __False__.
 
-
 #### H) $\exists x \exists y Q(x, y)$
+
 There are several values for $x$ and $y$ that will evaluate to true. For instance, if $x=2$ and $y=1$, this would be true.
 
 Therefore. the statement is __True__.
+
 #### I) $\forall x \forall y \neg S(x, y)$
+
 All values in this false. By negating the statement, this makes all evaluations of $x$ and $y$ values as true.
 
 Therefore, the statement is __True__.
@@ -726,35 +789,50 @@ Therefore, the statement is __True__.
 $$
 \exists x \exists y (x+y = x*y)
 $$
+
 #### D) The ratio of every two positive numbers is also positive.
+
 $$
 \forall x \forall y (((x > 0) \land (y  > 0)) \rightarrow (x / y > 0))
 $$
+
 #### E) The reciprocal of every positive number less than one is greater than one.
+
 $$
 \forall x (((x > 0) \land (x < 1)) \rightarrow (1/x > 1))
 $$
+
 #### F) There is no smallest number.
+
 $$
-\neg \exists x \forall y (x \leq y
+\neg \exists x \forall y (x \leq y)
 $$
+
 #### G) Every number other than 0 has a multiplicative inverse.
+
 $$
 \forall x ((x*(1/x)=1) \land (x \neg 0))
 $$
+
 ### Exercise 1.10.7
 #### C) There is at least one new employee who missed the deadline
+
 $$
 \exists x \forall y (N(x) \land ((x \geq 3) \rightarrow D(y)))
 $$
+
 #### D) Sam knows the phone number of everyone who missed the deadline
+
 $$
 \forall x (P(Sam, x) \rightarrow D(x))
 $$
+
 #### E) There is a new employee who knows everyone's phone number
+
 $$
 \exists x \forall y (
 $$
+
 #### F) Exactly one new employee missed the deadline.
 ### Exercise 1.10.10
 #### C) Every student has taken at least one class other than Math 101.
@@ -768,59 +846,86 @@ $$
 ## Question 12:
 ### Exercise 1.8.2
 #### B) Every patient was given the medication or the placebo or both.
-$$
-\forall x (D(x) \lor P(x) )\\
-\text{Negation:} \neg \forall x (D(x) \lor P(x) )\\
-\text{De Morgan's Law:} \exists x (\neg D(x) \land \neg P(x))\\
-\text{There is a patient who was not given the medication and was not given the placebo}
 
 $$
+\begin{array}{c}
+    \forall x (D(x) \lor P(x) )\\
+    \text{Negation:} \neg \forall x (D(x) \lor P(x) )\\
+    \text{De Morgan's Law:} \exists x (\neg D(x) \land \neg P(x))\\
+    \hline
+    \text{There is a patient who was not given the medication and was not given the placebo}
+\end{array}
+$$
+
 #### C) There is a patient who took the medication and had migraines.
 $$
-\exists x (P(x) \land M(x)) \\
-\text{Negation:} \neg \exists x (P(x) \land M(x)) \\
-\text{De Morgan's Law:}  \forall x (\neg D(x) \lor \neg P(x))\\
-\text{Every patient did not take the medicine or the placebo.}
+\begin{array}{c}
+    \exists x (P(x) \land M(x)) \\
+    \text{Negation:} \neg \exists x (P(x) \land M(x)) \\
+    \text{De Morgan's Law:}  \forall x (\neg D(x) \lor \neg P(x))\\
+    \hline
+    \text{Every patient did not take the medicine or the placebo.}
+\end{array}
 $$
 
 #### D) Every patient who took the placebo had migraines.
 $$
-\forall x (P(x) \rightarrow M(x))\\
-\text{Negation} \neg \forall x (P(x) \rightarrow M(x))\\
-\text{De Morgan's Law:} \exists x (P(x) \land \neg M(x))\\
-\text{There is a patient who took the placebo and did not have migraines.}
+\begin{array}{c}
+    \forall x (P(x) \rightarrow M(x))\\
+    \text{Negation} \neg \forall x (P(x) \rightarrow M(x))\\
+    \text{De Morgan's Law:} \exists x (P(x) \land \neg M(x))\\
+    \hline
+    \text{There is a patient who took the placebo and did not have migraines.}
+\end{array}
 $$
+
 #### E) There is a patient who had migraines and was given the placebo.
+
 $$
-\exists x (M(x) \land P(x))\\
-\text{Negation} \neg \exists x (M(x) \land P(x))\\
-\text{De Morgan's Law:} \forall x (\neg M(x) \lor \neg P(x))\\
-\text{Every patient did not have migraines or was not given the placebo.}
+\begin{array}{c}
+    \exists x (M(x) \land P(x))\\
+    \text{Negation} \neg \exists x (M(x) \land P(x))\\
+    \text{De Morgan's Law:} \forall x (\neg M(x) \lor \neg P(x))\\
+    \hline
+    \text{Every patient did not have migraines or was not given the placebo.}
+\end{array}
 $$
+
 ### Exercise 1.9.4
 #### C) $\exists x \forall y (P(x, y) \rightarrow Q(x, y))$
+
 $$
-\exists x \forall y (\neg P(x, y) \lor Q(x, y))  \\
-\neg \forall x \exists y (\neg P(x, y) \lor Q(x, y))  \\
-\forall x \neg \exists y (\neg P(x, y) \lor Q(x, y))  \\
-\forall x \exists y \neg (\neg P(x, y) \lor Q(x, y))  \\
-\forall x \exists y (\neg \neg P(x, y) \land \neg Q(x, y)) \\
-\forall x \exists y (P(x, y) \land \neg Q(x, y))
+\begin{array}{c}
+    \exists x \forall y (\neg P(x, y) \lor Q(x, y))  \\
+    \neg \forall x \exists y (\neg P(x, y) \lor Q(x, y))  \\
+    \forall x \neg \exists y (\neg P(x, y) \lor Q(x, y))  \\
+    \forall x \exists y \neg (\neg P(x, y) \lor Q(x, y))  \\
+    \forall x \exists y (\neg \neg P(x, y) \land \neg Q(x, y)) \\
+    \forall x \exists y (P(x, y) \land \neg Q(x, y))
+\end{array}
 $$
+
 #### D) $\exists x \forall y (P(x, y) \leftrightarrow P(y, x))$
+
 $$
-\exists x \forall y ((P(x, y) \rightarrow P(x, y)) \land (P(x, y) \rightarrow P(x, y))) \text{}\\
-\exists x \forall y ((\neg P(x, y) \lor P(x, y)) \land (\neg P(x, y) \lor P(x, y))) \text{}\\
-\neg \forall x \exists y ((\neg P(x, y) \lor P(x, y)) \land (\neg P(x, y) \lor P(x, y))) \text{}\\
-\forall x \neg \exists y ((\neg P(x, y) \lor P(x, y)) \land (\neg P(x, y) \lor P(x, y))) \text{}\\
-\forall x \exists y \neg ((\neg P(x, y) \lor P(x, y)) \land (\neg P(x, y) \lor P(x, y))) \text{}\\
-\forall x \exists y (\neg (\neg P(x, y) \lor P(x, y)) \lor \neg (\neg P(x, y) \lor P(x, y))) \text{}\\
-\forall x \exists y ((\neg \neg P(x, y) \land \neg P(x, y)) \lor (\neg \neg P(x, y) \land \neg P(x, y))) \text{}\\
-\forall x \exists y ((P(x, y) \land \neg P(x, y)) \lor (P(x, y) \land \neg P(x, y))) \text{}\\
+\begin{array}{c}
+    \exists x \forall y ((P(x, y) \rightarrow P(x, y)) \land (P(x, y) \rightarrow P(x, y))) \text{}\\
+    \exists x \forall y ((\neg P(x, y) \lor P(x, y)) \land (\neg P(x, y) \lor P(x, y))) \text{}\\
+    \neg \forall x \exists y ((\neg P(x, y) \lor P(x, y)) \land (\neg P(x, y) \lor P(x, y))) \text{}\\
+    \forall x \neg \exists y ((\neg P(x, y) \lor P(x, y)) \land (\neg P(x, y) \lor P(x, y))) \text{}\\
+    \forall x \exists y \neg ((\neg P(x, y) \lor P(x, y)) \land (\neg P(x, y) \lor P(x, y))) \text{}\\
+    \forall x \exists y (\neg (\neg P(x, y) \lor P(x, y)) \lor \neg (\neg P(x, y) \lor P(x, y))) \text{}\\
+    \forall x \exists y ((\neg \neg P(x, y) \land \neg P(x, y)) \lor (\neg \neg P(x, y) \land \neg P(x, y))) \text{}\\
+    \forall x \exists y ((P(x, y) \land \neg P(x, y)) \lor (P(x, y) \land \neg P(x, y))) \text{}\\
+\end{array}
 $$
+
 #### E) $\exists x \exists y P(x, y) \lor \forall x \forall y Q(x, y)$
+
 $$
-\neg \forall x \forall y P(x, y) \lor \neg \exists x \exists y Q(x, y)\\
-\forall x \neg \forall y P(x, y) \lor \exists x \neg \exists y Q(x, y)\\
-\forall x \forall y \neg P(x, y) \land \exists x \exists y \neg Q(x, y)
+\begin{array}{c}
+    \neg \forall x \forall y P(x, y) \lor \neg \exists x \exists y Q(x, y)\\
+    \forall x \neg \forall y P(x, y) \lor \exists x \neg \exists y Q(x, y)\\
+    \forall x \forall y \neg P(x, y) \land \exists x \exists y \neg Q(x, y)
+\end{array}
 $$
