Updated week1 homework and added notes on conditional statments

--- a/week1/homework/ac10281_hw1.md
+++ b/week1/homework/ac10281_hw1.md
@@ -818,19 +818,19 @@ $$
 #### C) There is at least one new employee who missed the deadline
 
 $$
-\exists x \forall y (N(x) \land ((x \geq 3) \rightarrow D(y)))
+\exists x (N(x) \land D(x)))
 $$
 
 #### D) Sam knows the phone number of everyone who missed the deadline
 
 $$
-\forall x (P(Sam, x) \rightarrow D(x))
+\forall y (P(Sam, y) \land D(y))
 $$
 
 #### E) There is a new employee who knows everyone's phone number
 
 $$
-\exists x \forall y (
+\exists x \forall y (N(x) \rightarrow P(x, y))
 $$
 
 #### F) Exactly one new employee missed the deadline.
