Mostly completed homework 1and added homework 2 pdf

--- a/week1/homework/ac10281_hw1.md
+++ b/week1/homework/ac10281_hw1.md
@@ -484,7 +484,7 @@ If Joe is eligible for the honors program, then he is maintaining a B average.
 
 #### C) _Rajiv can go on the roller coaster only if he is at least four feet tall._
 
-If Rajiv can go on the roller  coaster, then he is at least four feet tall.
+If Rajiv can go on the roller coaster, then he is at least four feet tall.
 
 #### D) _Rajiv can go on the roller coaster if he is at least four feet tall_.
 
@@ -811,7 +811,7 @@ $$
 #### G) Every number other than 0 has a multiplicative inverse.
 
 $$
-\forall x ((x*(1/x)=1) \land (x \neg 0))
+\forall x ((x*(1/x)=x) \land (x \neq 0))
 $$
 
 ### Exercise 1.10.7
@@ -830,15 +830,40 @@ $$
 #### E) There is a new employee who knows everyone's phone number
 
 $$
-\exists x \forall y (N(x) \rightarrow P(x, y))
+\exists x \forall y (N(x) \land P(x, y)))
 $$
 
 #### F) Exactly one new employee missed the deadline.
+
+$$
+\exists x \forall y (N(x) \land D(x) \land ((x \neq y) \rightarrow (N(y) \land \neg D(y))))
+$$
+
+
 ### Exercise 1.10.10
 #### C) Every student has taken at least one class other than Math 101.
+
+$$
+\forall x \exists y (y \neq \text{Math 101} \land T(x, y))
+$$
+
 #### D) There is a student who has taken every math class other than Math 101.
+
+$$
+\exists x \forall y (y \neq \text{Math 101}) \rightarrow T(x, y))
+$$
+
 #### E) Everyone other than Sam has taken at least two different math classes.
+
+$$
+\forall x \exists y \exists z ((x \neq Sam) \land (y \neq z)) \rightarrow (T(x, y) \land T(x, z))
+$$
+
 #### F) Sam has taken exactly two math classes.
+
+$$
+\exists x \exists y \forall z (((x \neq y) \land (y \neq z)) \rightarrow (T((Sam, x) \land T(Sam, y)) \land \neg T(Sam, z))
+$$
 
 <div style="page-break-after: aLways;"></div>
 \pagebreak
@@ -849,7 +874,7 @@ $$
 
 $$
 \begin{array}{c}
-    \forall x (D(x) \lor P(x) )\\
+    \forall x (D(x) \lor P(x) \lor (D(x) \land P(x)) )\\
     \text{Negation:} \neg \forall x (D(x) \lor P(x) )\\
     \text{De Morgan's Law:} \exists x (\neg D(x) \land \neg P(x))\\
     \hline
@@ -860,11 +885,11 @@ $$
 #### C) There is a patient who took the medication and had migraines.
 $$
 \begin{array}{c}
-    \exists x (P(x) \land M(x)) \\
-    \text{Negation:} \neg \exists x (P(x) \land M(x)) \\
+    \exists x (D(x) \land M(x)) \\
+    \text{Negation:} \neg \exists x (D(x) \land M(x)) \\
     \text{De Morgan's Law:}  \forall x (\neg D(x) \lor \neg P(x))\\
     \hline
-    \text{Every patient did not take the medicine or the placebo.}
+    \text{Every patient did not take the medicine or didn't get a migraine.}
 \end{array}
 $$
 
@@ -929,3 +954,9 @@ $$
     \forall x \forall y \neg P(x, y) \land \exists x \exists y \neg Q(x, y)
 \end{array}
 $$
+
+$\exists x \forall y ((x = "Me") \rightarrow F(x, y))$
+
+$\exists x \forall y (S(x) \land (F(y) \rightarrow A(x, y)))$
+
+$\forall y \exists x (F(y) \rightarrow (S(x) \lor A(x, y)))$
