Updated work for week 2 and notes for chap 2 in zy

--- a/week2/homework/ac10281_hw2.md
+++ b/week2/homework/ac10281_hw2.md
@@ -11,47 +11,372 @@ Use the rules of inference and the laws of propositional logic to prove that eac
 
 
 #### B) 
+
+$$
+\begin{array}{rl}
+    & \text{Argument} \\
+    \hline
+    & p \to (q \land r) \\
+    & \neg q \\
+    \hline
+    \therefore & \neg p
+\end{array}
+$$
+
+$$
+    \begin{array}{r|l|l}
+        1. & \neg q & \text{Hypothesis} \\
+        2. & \neg q \lor \neq r & \text{Addition 1} \\
+        3. & \neg ( q \land r) & \text{De Morgans Law 2} \\
+        4. & p \to (q \land r) & \text{Hypothesis} \\
+        5. & \neg p& \text{Modus Tollens 3, 4} \\
+    \end{array}
+$$
+
+#### E) 
+
+$$
+\begin{array}{rl}
+    & \text{Argument} \\
+    \hline
+    & p \lor q \\
+    & \neg p \lor r \\
+    & \neg q \\
+    \hline
+    \therefore & r
+\end{array}
+$$
+
+
+$$
+    \begin{array}{r|l|l}
+        1. &\neg q & \text{Hypothesis} \\
+        2. &p \lor q & \text{Hypothesis} \\
+        3. &p & \text{Disjunctive Syllogism 1, 2} \\
+        4. &\neg p \lor r & \text{Hypothesis} \\
+        5. &r & \text{Disjunctive Syllogism 3, 4} \\
+    \end{array}
+$$
+
+### 1.12.3
+
+Some of the rules of inference can be proven using the other rules of inference and the laws of propositional logic.
+
+#### C) One of the rules of inference is Disjunctive Syllogism:
+
 $$
 \begin{array}{rl}
     & \text{Argument} \\
     \hline
     & p \to q \\
-    & q \to r \\
-    & \neg r \\
+    & p \\
     \hline
     \therefore & q
 \end{array}
 $$
 
-$$
-\begin{array}{r|l|l}
-    1. & \neg r & \text{Hypothesis} \\
-    2. & q \to r & \text{Hypothesis} \\
-    3. & q & \text{Modus Tollens 1, 2} \\
-    4. & p \lor q & \text{Addition 3} \\
-    5. & p \to q & \text{Hypothesis} \\
-    6. & \neg p \lor q & \text{Conditional Identity 5} \\
-    7. & \neg\neg p \lor \neg q & \text{Double Negation 6} \\
-    8. & \neg p \lor q & \text{De Morgans Law 7} \\
-    8. & q \lor q & \text{Resolution 4, 8} \\
-    8. & q & \text{Resolution 4, 8} \\
+Prove that Disjunctive syllogism is valid using the laws of propositional logic and any of the other rules of inference besides Disjunctive syllogism. (Hint: you will need one of the conditional identities from the laws of propositional logic).
 
+$$
+    \begin{array}{r|l|l}
+        1. & p \to q& \text{Hypothesis} \\
+        2. & \neg p \lor q& \text{Conditional Identity 1} \\
+        3. & q & \text{Hypothesis} \\
+        4. & q \lor \neg p& \text{Addition 3} \\
+        5. & \neg p \lor q& \text{Commutative Law 4} \\
+        6. & q \lor q & \text{Resolution 2, 5} \\
+        7. & q & \text{Idempotent Law 6} \\
+    \end{array}
+$$
+
+### 1.12.5
+
+Give the form of each argument. Then prove whether the argument is valid or invalid. For valid arguments, use the rules of inference to prove validity.
+
+#### C)
+
+$$
+\begin{array}{rl}
+    & \text{Argument} \\
+    \hline
+    & \text{I will buy a new car and a new house only if I get a job} \\
+    & \text{I am not going to get a job} \\
+    \hline
+    \therefore & \text{I will not buy a new car}
 \end{array}
 $$
-#### E) 
 
-### 1.12.3
+$c$: I will buy a new car
+
+$h$: I will get a new house
+
+$j$: I am getting a job
+
+$$
+\begin{array}{rl}
+    & \text{Argument Form} \\
+    \hline
+    & (c \land h) \to j \\
+    & \neg j \\
+    \hline
+    \therefore & \neg c
+\end{array}
+$$
+
+$$
+\begin{array}{|c|c|c|c|c|c|}
+    \hline
+    c & h & j & (c \land h) \to j & \neg j & \neg c \\ \hline\hline
+    T & T & T & T & F & F \\ \hline
+    T & T & F & F & T & F \\ \hline
+    T & F & T & T & F & F \\ \hline
+    \color{red}T & \color{red}F & \color{red}F & \color{red}T \color{red}& \color{red}T & \color{red}F \\ \hline
+    F & T & T & T & F & T \\ \hline
+    F & T & F & T & T & T \\ \hline
+    F & F & T & T & F & T \\ \hline
+    F & F & F & T & T & T \\ \hline
+\end{array}
+$$
+
+When $c=T$, $h=F$, and $j=F$, hypotheses are True, but our conclusion is False.
+
+Therefore, this argument is __invalid__ when $c=T$, $h=F$, and $j=F$.
+
+#### D)
+
+$$
+\begin{array}{rl}
+    & \text{Argument} \\
+    \hline
+    & \text{I will buy a new car and a new house only if I get a job} \\
+    & \text{I am not going to get a job} \\
+    & \text{I will buy a new house} \\
+    \hline
+    \therefore & \text{I will not buy a new car}
+\end{array}
+$$
+
+$c$: I will buy a new car
+
+$h$: I will get a new house
+
+$j$: I am getting a job
+
+$$
+\begin{array}{rl}
+    & \text{Argument Form} \\
+    \hline
+    & (c \land h) \to j \\
+    & \neg j \\
+    & h \\
+    \hline
+    \therefore & \neg c
+\end{array}
+$$
+
+$$
+\begin{array}{|c|c|c|c|c|c|}
+    \hline
+    c & h & j & (c \land h) \to j & \neg j & \neg c \\ \hline\hline
+    T & T & T & T & F & F \\ \hline
+    T & T & F & F & T & F \\ \hline
+    T & F & T & T & F & F \\ \hline
+    T & F & F & T & T & F \\ \hline
+    F & T & T & T & F & T \\ \hline
+    \color{blue}F & \color{blue}T & \color{blue}F & \color{blue}T & \color{blue}T & \color{blue}T \\ \hline
+    F & F & T & T & F & T \\ \hline
+    F & F & F & T & T & T \\ \hline
+\end{array}
+$$
+
+When $c=F$, $h=T$, and $j=F$, all hypotheses are True and our conclusion is true. This is the only row in which all hypotheses are shown to be valid.
+
+Therefore, this argument is __valid__.
+
+$$
+    \begin{array}{|c|}
+        \hline
+        \text{Proof} \\
+        \hline
+        \begin{array}{r|l|l}
+            1. & (c \land h) \to j& \text{Hypothesis} \\
+            2. & \neg j & \text{Hypothesis} \\
+            3. & \neg (c \land h) & \text{Modus Tollens 1, 2} \\
+            4. & \neg c \lor \neg h& \text{De Morgans Law 3} \\
+            5. & h & \text{Hypothesis} \\
+            6. & \neg c & \text{Disjunctive Syllogism} \\
+        \end{array} \\
+        \hline
+    \end{array}
+$$
+
+### 1.13.3
+
+Show that the given argument is invalid by giving values for the predicates P and Q over the domain {a, b}.
+
+#### B)
+
+$$
+\begin{array}{rl}
+    & \text{Argument Form} \\
+    \hline
+    & \exists x (P(x) \lor Q(x)) \\
+    & \exists \neg Q(x) \\
+    \hline
+    \therefore & \exists x P(x)
+\end{array}
+$$
+
+$$
+\begin{array}{|c|c|c|}
+    \hline
+    & p & q \\ \hline\hline
+    a & F & F\\ \hline
+    b & F & T\\ \hline
+\end{array}
+$$
+
+We can see from the truth table that when $P(x)$ is false and $Q(x)$ is true, $\exists x (P(x) \lor Q(x))$ evaluates to true. When $P(x)$ is false and $Q(x)$ is false, $\exists \neg Q(x)$ evaluates to true. However, this results in $\exists x P(x)$ evaluating to false.
+
+Therefore, this argument is __invalid__.
+
+### 1.13.5
+
+Prove whether each argument is valid or invalid. First find the form of the argument by defining predicates and expressing the hypotheses and the conclusion using the predicates. If the argument is valid, then use the rules of inference to prove that the form is valid. If the argument is invalid, give values for the predicates you defined for a small domain that demonstrate the argument is invalid.
+
+The domain for each problem is the set of students in a class.
+
+#### D)
+
+$$
+\begin{array}{rl}
+    & \text{Argument} \\
+    \hline
+    & \text{Every student who missed class got a detention.} \\
+    & \text{Penelope is a student in the class.} \\
+    & \text{Penelope did not miss class.} \\
+    \hline
+    \therefore & \text{Penelope did not get a detention.}
+\end{array}
+$$
+
+__Definitions:__
+
+- $C(x)$: x is a student who missed class
+- $D(x)$: x got detention
+
+$$
+\begin{array}{rl}
+    & \text{Argument Form} \\
+    \hline
+    & \forall x(C(x) \to D(x)) \\
+    & \text{Penelope, a student in class} \\
+    & \neg C(Penelope) \\
+    \hline
+    \therefore & \neg D(Penelope)
+\end{array}
+$$
+
+
+$$
+\begin{array}{|c|c|c|}
+    \hline
+    & C & D \\ \hline\hline
+    \text{Penelope} & F & T\\ \hline
+\end{array}
+$$
+
+When $C(x)$ is false and $D(x)$ is true, both hypothesis both evaluate to true. However, $\neg D(x)$ evaluates to false.
+
+Therefore, this argument is __invalid__.
+
+#### E)
+
+$$
+\begin{array}{rl}
+    & \text{Argument} \\
+    \hline
+    & \text{Every student who missed class or got detention did not get an A.} \\
+    & \text{Penelope is a student in the class.} \\
+    & \text{Penelope got an A.} \\
+    \hline
+    \therefore & \text{Penelope did not get a detention.}
+\end{array}
+$$
+
+__Definitions:__
+
+- $C(x)$: x is a student who missed class
+- $D(x)$: x got detention
+- $A(x)$: x got an A
+
+$$
+\begin{array}{rl}
+    & \text{Argument Form} \\
+    \hline
+    & \forall x ((C(x) \lor D(x)) \to \neg A(x)) \\
+    & \text{Penelope, a student in class} \\
+    & A(Penelope) \\
+    \hline
+    \therefore & \neg D(Penelope)
+\end{array}
+$$
+
+
+$$
+    \begin{array}{|c|}
+        \hline
+        \text{Proof}\\
+        \hline
+        \begin{array}{r|l|l}
+            1. & \text{Penelope, a student in class}& \text{Hypothesis} \\
+            2. & \forall x ((C(x) \lor D(x)) \to \neg A(x)) & \text{Hypothesis} \\
+            3. & C(Penelope) \lor D(Penelope) \to \neg A(Penelope)& \text{Universal Instantiation 1, 2} \\
+            4. & A(Penelope) & \text{Hypothesis} \\
+            5. & \neg (C(Penelope) \lor D(Penelope))& \text{Modus Tollens 3, 4} \\
+            6. & \neg C(Penelope) \land \neg D(Penelope) & \text{De Morgans Law 5} \\
+            7. & \neg D(Penelope)& \text{Simplification 6} \\
+        \end{array} \\
+        \hline
+    \end{array}
+$$
+
+## Question 6:
+
+### 2.4.1
+
+#### D)
+
+### 2.4.3
+
+#### B)
+
+## Question 7:
+
+### 2.5.1
+
+#### D)
+
+### 2.5.4
+
+#### A)
+
+#### B)
+
+### 2.5.5
+
+#### C)
+
+## Question 8:
+
+### 2.6.6
 
 #### C)
 
 #### D)
 
-### 1.13.3
+## Question 9:
+
+### 2.7.2
 
 #### B)
-
-### 1.13.5
-
-#### D)
-
-#### E)
