Added notes and updated homework 2

--- a/week2/homework/ac10281_hw2.md
+++ b/week2/homework/ac10281_hw2.md
@@ -1,7 +1,8 @@
-# Homework - Week 2
-__Name__: Adam Collado
-__Course__: Tandon Bridge
-
+---
+title: Homework - Week 2
+author: Adam Collado
+toc: true
+---
 
 ## Question 5:
 
@@ -343,9 +344,13 @@ $$
 
 ## Question 6:
 
-### 2.4.1
+### 2.4.1: Proving statements about odd and even integers with direct proofs.
 
-#### D)
+Each statement below involves odd and even integers. An odd integer is an integer that can be expressed as , where  is an integer. An even integer is an integer that can be expressed as , where  is an integer.
+
+Prove each of the following statements using a direct proof.
+
+#### D) The product of two odd integers is an odd integer.
 
 ### 2.4.3
 
