Updated homework to Q7 and moved cpp files

--- a/week2/homework/ac10281_hw2_q5to9.md
+++ b/week2/homework/ac10281_hw2_q5to9.md
@@ -3,7 +3,7 @@ title: Homework - Week 2
 author: Adam Collado
 toc: true
 ---
-
+\newpage
 ## Question 5:
 
 ### 1.12.2
@@ -342,19 +342,64 @@ $$
     \end{array}
 $$
 
+\newpage
+
 ## Question 6:
 
 ### 2.4.1: Proving statements about odd and even integers with direct proofs.
 
-Each statement below involves odd and even integers. An odd integer is an integer that can be expressed as , where  is an integer. An even integer is an integer that can be expressed as , where  is an integer.
+Each statement below involves odd and even integers. An odd integer is an integer that can be expressed as $2k+1$, where $k$ is an integer. An even integer is an integer that can be expressed as $2k$, where $k$ is an integer.
 
 Prove each of the following statements using a direct proof.
 
 #### D) The product of two odd integers is an odd integer.
 
-### 2.4.3
 
-#### B)
+Let $x$ and $y$ be odd integers. We shall prove that $x*y$ is an odd integer.
+
+Since $x$  and $y$ are odd integers, $x=2k+1$ and $y=2j+1$ where $k$ and $j$ are integers and $x$, and $y$ are not equal to 0.
+
+Plugging in $x=2k+1$ and $y=2j+1$ for $x*y$ gives:
+
+$$
+\begin{aligned}
+    x*y &= (2k+1)(2j+1)\\
+        &= 4kj+2k+2j+1\\
+        &= 2(2kj+k+j)+1\\
+\end{aligned}
+$$
+
+Since $k$ and $j$ are integers, $2(2kj+k+j)+1$ is also an integer.
+
+Therefore, the product of $x*y$ is can be expressed as $2l+1$ where $l=2kj+k+j+1$ is an integer.
+
+We can conclude from this that the product of odd integers $x$ and $y$ is an odd integer.
+$\blacksquare$
+
+### 2.4.3: Proving Algebraic Statements with Direct Proof
+
+Prove each of the following statements using a direct proof.
+
+#### B) If $x$ is a real number and $x \geq 3$, then $12-7x+x^2 \geq 0$.
+
+Let $x$ be a real number and $x >= 3$. Since $x >= 3$, we can show that $x-3>=0$ 
+
+Since $x$ is a real number, then $12-7x+x^2$ is a real number. And since $x-3>=0$, we can say that $12-7x+x^2>=x-3$
+
+Thus:
+
+$$
+\begin{aligned}
+    12-7x+x^2&>=x-3\\
+    (x-3)(x-4)&>=x-3\\
+    x-4&>=1\\
+    x-3&>=0\\
+    x&>=3\\
+    \blacksquare
+\end{aligned}
+$$
+
+\newpage
 
 ## Question 7:
 
@@ -372,6 +417,8 @@ Prove each of the following statements using a direct proof.
 
 #### C)
 
+\newpage
+
 ## Question 8:
 
 ### 2.6.6
@@ -379,6 +426,8 @@ Prove each of the following statements using a direct proof.
 #### C)
 
 #### D)
+
+\newpage
 
 ## Question 9:
 
