Updated homework 2 with Q7 work

--- a/week2/homework/ac10281_hw2_q5to9.md
+++ b/week2/homework/ac10281_hw2_q5to9.md
@@ -382,19 +382,19 @@ Prove each of the following statements using a direct proof.
 
 #### B) If $x$ is a real number and $x \geq 3$, then $12-7x+x^2 \geq 0$.
 
-Let $x$ be a real number and $x >= 3$. Since $x >= 3$, we can show that $x-3>=0$ 
+Let $x$ be a real number and $x \geq 3$. Since $x \geq 3$, we can show that $x-3 \geq 0$ 
 
-Since $x$ is a real number, then $12-7x+x^2$ is a real number. And since $x-3>=0$, we can say that $12-7x+x^2>=x-3$
+Since $x$ is a real number, then $12-7x+x^2$ is a real number. And since $x-3 \geq 0$, we can say that $12-7x+x^2 \geq x-3$
 
 Thus:
 
 $$
 \begin{aligned}
-    12-7x+x^2&>=x-3\\
-    (x-3)(x-4)&>=x-3\\
-    x-4&>=1\\
-    x-3&>=0\\
-    x&>=3\\
+    12-7x+x^2&\geq x-3\\
+    (x-3)(x-4)&\geq x-3\\
+    x-4&\geq 1\\
+    x-3&\geq 0\\
+    x&\geq 3\\
     \blacksquare
 \end{aligned}
 $$
@@ -403,19 +403,35 @@ $$
 
 ## Question 7:
 
-### 2.5.1
+### 2.5.1: Proof by contrapositive of statements about odd and even integers.
 
-#### D)
+#### D) For every integer $n$, if $n^2 - 2n + 7$ is even, then $n$ is odd.
 
-### 2.5.4
 
-#### A)
 
-#### B)
+### 2.5.4: Proof by contrapositive of algebraic statements.
 
-### 2.5.5
+#### A) For every pair of real numbers $x$ and $y$, if $x^3 + xy^2 \geq x^2y + y^3$, then $x \geq y$.
 
-#### C)
+Let x and y be real numbers. Assume $x < y$. We will prove that $x^3 + xy^2 < x^2y+y^3$.
+
+
+$$
+\begin{aligned}
+x^3+xy^2&\geq x^2y+y^3 \\
+x(x^2+y^2)&\geq y(x^2+y^2)\\
+\frac{x(x^2+y^2)}{(x^2+y^2)}&\geq \frac{y(x^2+y^2)}{(x^2+y^2)} \\
+x&\geq y
+\end{aligned}
+$$
+
+
+
+#### B) For every pair of real numbers $x$ and $y$, if $x+y > 20$, then $x > 10$ or $y > 10$.
+
+### 2.5.5: Proving statements using direct proof or by contrapositive.
+
+#### C) For every non-zero real number $x$, if $x$ is irrational, then $1/x$ is also irrational
 
 \newpage
 
