Finished question 7, working on 8 and 9

--- a/week2/homework/ac10281_hw2_q5to9.md
+++ b/week2/homework/ac10281_hw2_q5to9.md
@@ -411,27 +411,65 @@ $$
 
 ### 2.5.4: Proof by contrapositive of algebraic statements.
 
-#### A) For every pair of real numbers $x$ and $y$, if $x^3 + xy^2 \geq x^2y + y^3$, then $x \geq y$.
+#### A) For every pair of real numbers $x$ and $y$, if $x^3 + xy^2 \leq x^2y + y^3$, then $x \leq y$.
 
-Let x and y be real numbers. Assume $x < y$. We will prove that $x^3 + xy^2 < x^2y+y^3$.
+Let x and y be real numbers. Assume $x > y$. We will prove that $x^3 + xy^2 > x^2y+y^3$.
+
+Thus:
 
 
 $$
 \begin{aligned}
-x^3+xy^2&\geq x^2y+y^3 \\
-x(x^2+y^2)&\geq y(x^2+y^2)\\
-\frac{x(x^2+y^2)}{(x^2+y^2)}&\geq \frac{y(x^2+y^2)}{(x^2+y^2)} \\
-x&\geq y
+x^3+xy^2& > x^2y+y^3 \\
+x(x^2+y^2)& > y(x^2+y^2)\\
+\frac{x(x^2+y^2)}{(x^2+y^2)}& > \frac{y(x^2+y^2)}{(x^2+y^2)} \\
+x&> y
 \end{aligned}
 $$
 
+Since $x^3+xy^2 > x^2y+y^3$ can be expressed as $x(p) > y(p)$, it follows that x is always greater than $y$.
 
+Therefore, $x^3 + xy^2 > x^2y + y^3$. $\blacksquare$
 
 #### B) For every pair of real numbers $x$ and $y$, if $x+y > 20$, then $x > 10$ or $y > 10$.
+
+Let x and y be real numbers, $x \leq 10$ and $y \leq 10$. We will prove that $x+y \leq 20$.
+
+Since x is a real number, we can say $x \leq 10$ is a real number and show it as $x - 10 \leq 0$.
+
+Since y is a real number, we can say $y \leq 10$ is a real number and show it as $0 \leq 10 - y$.
+
+Thus, we can say the following: $x - 10 \leq  0 \leq 10 - y$
+
+$$
+\begin{aligned}
+x - 10 &\leq 10 - y \\
+x + y & \leq 10 + 10 \\
+x + y & \leq 20 \\
+\end{aligned}
+$$
 
 ### 2.5.5: Proving statements using direct proof or by contrapositive.
 
 #### C) For every non-zero real number $x$, if $x$ is irrational, then $1/x$ is also irrational
+
+Let x be a non-zero real number, and $1/x$ is rational. We will be prove that $x$ is rational.
+
+Since $x$ is a real number and $x \neq 0$, we can assume that $1/x$ is a real number and show it as the integers $p$ and $q$ such that $p/q$ where $q \neq 0$.
+
+Thus $1/x = p/q$.
+
+Since $1/x \neq 0$, then $p \neq 0$.
+
+$$
+\begin{aligned}
+x &= \frac{1}{1/x} \\
+&=\frac{1}{p/q} \\
+&=\frac{q}{p} \\
+\end{aligned}
+$$
+
+Since $x$ can be shown to be the quotient of two integers with a non-zero denominator, it follows that $x$ must be a rational number. $\blacksquare$
 
 \newpage
 
